src/test/deca/context/invalid/print-class.deca
// Description:
//    Condition de la règle 3.31 non respectée 
//
// Resultats:
//    Ligne 10: Print(ln) ne peut prendre qu'un int ou un float ou une string
//

Class A{

}

{
    A a = new A();
    println(a);
}
